# OPCUAGateway

./: CMakeLists.txt
files/: nodes_QUALIFIEDNAME.txt
open62541/: open62541.c  open62541.h
open62541/src_generated/: open62541.pc
open62541/src_generated/open62541/: config.h  namespace0_generated.c  nodeids.h  statuscodes.c  statuscodes.h  transport_generated.c  transport_generated.h  transport_generated_encoding_binary.h  transport_generated_handling.h  types_generated.c  types_generated.h  types_generated_encoding_binary.h  types_generated_handling.h
src/: server.c
src/database/: readDht11Data  readDht11Data.c  readDht11Data.h
src/device/: dht11.c  dht11.h
src/drives/: dht11  dht11ReadData  dht11ReadData.c  dht11ReadData.h  test  test.c
src/mqtt/: mqtt_publish.c  mqtt_publish.h  pubsub_mqtt_publish.c  tutorial_pubsub_mqtt_publish.c
src/test/: addFunctionServer.c  client.c  clientMonitorVariableClient.c  clientMonitorVariableServer.c  eventServer.c  monitorMultiVariableServer.c  monitorVariantServer.c  objectServer.c  objectTypeServer.c
